--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,7 +50,8 @@ dependencies:
   profanity_filter: ^2.0.0
   freezed_annotation: ^2.4.1
   extended_text_field: ^8.0.0
-
+  flutter_quill: ^9.3.2
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +78,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/abusive_word.txt
+    - assets/default_avatar.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
